<resources>
    <string name="app_name">EcoMap</string>
    <string name="username">Username</string>
    <string name="sign_in_logo_description">EcoMap logo</string>
    <string name="password">Password</string>
    <string name="sign_in_sign_in_button">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="sign_in_username_required_error">Username must be filled</string>
    <string name="sign_in_password_required_error">Password must be filled</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="first_name_required_error">First name must be filled</string>
    <string name="last_name_required_error">Last name must be filled</string>
    <string name="error_create_account">Failed to create account</string>
    <string name="error_sign_in_invalid_credentials">Invalid credentials</string>
    <string name="password_constraints">Password must contain at least 14 characters, including one regular character, one special character, and one number.</string>
    <string name="content_description_my_location">Go to my location</string>
    <string name="container_category_general">General</string>
    <string name="container_category_paper">Paper</string>
    <string name="container_category_plastic">Plastic</string>
    <string name="container_category_metal">Metal</string>
    <string name="container_category_glass">Glass</string>
    <string name="container_category_organic">Organic</string>
    <string name="container_category_hazardous">Hazardous</string>
    <string name="way_unknown">Unknown way</string>
    <string name="error_sign_in_expired">Session expired</string>
    <string name="placeholder">Placeholder</string>
    <string name="directions">Directions</string>
    <string name="content_description_container_category">Container category</string>
    <string name="content_description_container_bookmark">Container bookmark</string>
    <string name="content_description_my_account">My account</string>
    <string name="my_account">My account</string>
    <string name="personal_information">Personal information</string>
    <string name="sign_out">Sign out</string>
    <string name="container_bookmarks">Container bookmarks</string>
    <string name="container_bookmarks_empty">There are no container bookmarks</string>
</resources>
