<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserAccountActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_account"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/my_account">

        <Button
            android:id="@+id/button_sign_out"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/sign_out"
            app:icon="@drawable/sign_out"
            android:layout_marginEnd="16dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <TextView
        android:id="@+id/text_view_personal_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/personal_information"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_user_account" />

    <TextView
        android:id="@+id/text_view_first_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/first_name"
        android:textColor="@color/gray_500"
        app:layout_constraintEnd_toStartOf="@+id/text_view_last_name_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_personal_information"
        app:layout_constraintTop_toBottomOf="@+id/text_view_personal_information" />

    <TextView
        android:id="@+id/text_view_first_name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/text_view_first_name_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_first_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_first_name_title" />

    <TextView
        android:id="@+id/text_view_last_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_name"
        android:textColor="@color/gray_500"
        app:layout_constraintEnd_toEndOf="@+id/text_view_personal_information"
        app:layout_constraintStart_toEndOf="@+id/text_view_first_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_personal_information" />

    <TextView
        android:id="@+id/text_view_last_name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/text_view_last_name_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_last_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_last_name_title" />

    <TextView
        android:id="@+id/text_view_username_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textColor="@color/gray_500"
        app:layout_constraintEnd_toEndOf="@+id/text_view_last_name_value"
        app:layout_constraintStart_toStartOf="@+id/text_view_first_name_value"
        app:layout_constraintTop_toBottomOf="@+id/text_view_first_name_value" />

    <TextView
        android:id="@+id/text_view_username_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/text_view_username_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_username_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_username_title" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar_user_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_begin"
        app:layout_constraintTop_toTopOf="@+id/toolbar_user_account" />

</androidx.constraintlayout.widget.ConstraintLayout>
